tests/baselines/reference/optionalSetterParam.errors.txt
tests/cases/compiler/optionalSetterParam.ts(3,16): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/compiler/optionalSetterParam.ts(3,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/optionalSetterParam.ts (2 errors) ====
    class foo {
    
        public set bar(param?:any) { }
                   ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
                   ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    